finalize live chat with pusher and eccho
need to fix some delay

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,9 +10,9 @@ $gray: #92959e;
 }
 
 .livechat {
-    .container {
+    .container1 {
         margin: 0 auto;
-        width: 750px;
+        width: 850px;
         background: #444753;
         border-radius: 5px;
     }
@@ -75,7 +75,7 @@ $gray: #92959e;
     }
 
     .chat {
-        width: 490px;
+        width: 590px;
         float: left;
         background: #f2f5f8;
         border-top-right-radius: 5px;
