--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-.livechat .container {
+.livechat .container1 {
   margin: 0 auto;
-  width: 750px;
+  width: 850px;
   background: #444753;
   border-radius: 5px;
 }
@@ -69,7 +69,7 @@
 }
 
 .livechat .chat {
-  width: 490px;
+  width: 590px;
   float: left;
   background: #f2f5f8;
   border-top-right-radius: 5px;
